# butcher

./: .gitignore  ChangeLog.md  README.md  butcher.cabal  seaaye.nix  stack-8-10.yaml  stack-8-4.yaml  stack-8-6.yaml  stack-8-8.yaml  stack-8-8_.yaml  stack-9-0.yaml
examples/: BarbieParsing.hs  HelloWorld.hs  InteractiveConcurrentOutput.hs  SimpleCommandlineParser.hs
nix/: .gitignore  all.nix  create-roots.sh  via-hackage.nix  via-stackage.nix
src-tests/: TestMain.hs
src/UI/Butcher/: Applicative.hs  Monadic.hs
src/UI/Butcher/Applicative/: Command.hs  Flag.hs  IO.hs  Param.hs  Pretty.hs
src/UI/Butcher/Internal/: Applicative.hs  ApplicativeTypes.hs  BasicStringParser.hs  CommonTypes.hs  Interactive.hs  Monadic.hs  MonadicTypes.hs  Pretty.hs
src/UI/Butcher/Monadic/: BuiltinCommands.hs  Command.hs  Flag.hs  IO.hs  Param.hs  Types.hs
srcinc/: prelude.inc
